# CPP-CLI-Game

./: CMakeLists.txt  Object.h  Point.h  main  main.cpp
Characters/: Character.h
Characters/Heroes/: DemolitionHero.h  Hero.h  MedicHero.h
Characters/Monsters/: GhostMonster.h  Monster.h  TankMonster.h
GameEngine/: Game.h
Items/: Ammo.h  Item.h  Potion.h
Weapons/: Bazooka.h  Gun.h  Pistol.h  Rifle.h
